--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,4 +13,15 @@
         <servlet-name>match</servlet-name>
         <url-pattern>/match</url-pattern>
     </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>Authentication</servlet-name>
+        <servlet-class>Authentication</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Authentication</servlet-name>
+        <url-pattern>/login/authentication</url-pattern>
+    </servlet-mapping>
 </web-app>
